# cruxdev

./: .coverage  .gitignore  .mcp.json  ADOPTION_PLAYBOOK.md  ADOPTION_PROCESS.md  BUILD_PLAN_001_DETERMINISTIC_ENGINE.md  CHANGELOG.md  CONTRIBUTING.md  CRUX_EVOLUTION_PLAN_001_DETERMINISTIC_ENGINE.md  CruxDev.md  E2E_TEST_PATTERNS.md  README.md  SECURITY.md  SESSION_UPGRADE.md  UAT_TEST_PATTERNS.md  install.sh  pyproject.toml
rust/: Cargo.toml
rust/src/: git.rs  graph.rs  install.rs  main.rs  normalize.rs  server.rs  status.rs  stream.rs
rust/src/adoption/: classify.rs  gaps.rs  inventory.rs  mod.rs  templates.rs
rust/src/bus/: broker.rs  hook.rs  mod.rs
rust/src/cli/: mod.rs
rust/src/competitors/: discovery.rs  gap_analysis.rs  guided_research.rs  impact.rs  mod.rs  research.rs  runner.rs
rust/src/dispatch/: anthropic.rs  mod.rs
rust/src/domain/: mod.rs
rust/src/engine/: build_freshness.rs  checklist.rs  contrast_check.rs  convergence.rs  form_detect.rs  index.rs  mod.rs  page_audit.rs  persistence.rs  plan_status.rs  plan_validator.rs  priority.rs  report.rs  router.rs  state.rs  test_runner.rs  toolchain.rs  wal.rs
rust/src/evolution/: github.rs  mod.rs
rust/src/growth/: config.rs  content.rs  content_analyzer.rs  content_pipeline.rs  llms_txt.rs  marketing_plan.rs  marketing_templates.rs  marketing_validator.rs  metrics.rs  mod.rs  platform_specs.rs  readme.rs  releases.rs  seo.rs  typefully.rs  x_client.rs  x_queue.rs
rust/src/gtv/: cache.rs  mod.rs  scanner.rs  verifier.rs
rust/src/improvement/: agent_evolution.rs  (+15 more)
rust/tests/: mcp_e2e.rs
(+877 files in other folders)
