[package]
name = "cruxdev"
version = "0.1.0"
edition = "2024"
description = "Autonomous convergence engine for AI-driven development — single binary"
license = "MIT"

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io", "schemars"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
regex = "1"
anyhow = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
toml = "0.8"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
rmcp = { version = "0.16", features = ["client", "transport-child-process"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
